docs on the 5 config files

--- a/data/config.ini
+++ b/data/config.ini
@@ -12,17 +12,17 @@ n1_element =
 
 [instance]
 data dir = 
-log_dir = gfgf
+log_dir = 
 num_membranes = 
 ub_area = 
-lb_area = gfgfg
+lb_area = 
 ub_acell = 
-fixing_var = gf
-fname = 
-fname_perm = gfgf
+fixing_var = 
+fname = fgfdg
+fname_perm = 
 fname_eco = 
-fname_mask = gffgf
+fname_mask = 
 prototype_data = 
-uniform_pup = 
-vp = gfgf
+booluniform_pup = 
+vp = 
 variable_perm = 
