--- a/mind/requirements.txt
+++ b/mind/requirements.txt
@@ -6,6 +6,7 @@ charset-normalizer==3.4.2
 click==8.2.1
 contourpy==1.3.2
 cycler==0.12.1
+cyipopt==1.5.0
 dill==0.4.0
 fonttools==4.58.4
 idna==3.10
