--- a/mind/requirements.txt
+++ b/mind/requirements.txt
@@ -1,51 +1,10 @@
-astroid==3.3.10
-autopep8==2.3.2
-black==25.1.0
-certifi==2025.6.15
-charset-normalizer==3.4.2
-click==8.2.1
-contourpy==1.3.2
-cycler==0.12.1
-cyipopt==1.5.0
-dill==0.4.0
-fonttools==4.58.4
-idna==3.10
-iniconfig==2.1.0
-isort==6.0.1
-joblib==1.5.1
-kiwisolver==1.4.8
-lxml==6.0.0
 matplotlib==3.10.3
-mccabe==0.7.0
-mypy_extensions==1.1.0
-nose==1.3.7
-numpy==2.3.1
-orjson==3.10.18
-packaging==25.0
-pandas==2.3.0
-pathspec==0.12.1
-pillow==11.3.0
-platformdirs==4.3.8
-pluggy==1.6.0
-ply==3.11
-pycodestyle==2.14.0
-Pygments==2.19.2
-pylint==3.3.7
-pyomo==6.9.2
-pyparsing==3.2.3
-PyQt6==6.9.1
-PyQt6-Qt6==6.9.1
-PyQt6_sip==13.10.2
-pytest==8.4.1
-python-dateutil==2.9.0.post0
-pytz==2025.2
-PyUtilib==6.0.0
-PyYAML==6.0.2
-requests==2.32.4
+numpy==2.2.6
+pandas==2.3.1
+pdoc3==0.11.6
+Pyomo==5.7.3
 scikit-learn==1.7.0
-scipy==1.16.0
-six==1.17.0
-threadpoolctl==3.6.0
-tomlkit==0.13.3
-tzdata==2025.2
-urllib3==2.5.0
+scipy==1.15.3
+seaborn==0.13.2
+PyYAML==6.0.2
+
